--- a/Tutorial/加载数据.md
+++ b/Tutorial/加载数据.md
@@ -10,7 +10,9 @@
 
 加载数据前，需要掌握正确的读取路径方法。很多教程中的例子，在讲解的时候，没有提供图片，或者读者不知道修改教程中的读取路径，打击了热情。
 
-**建议：为了保证大家可以跟着教程一步一步练习，教程中会出现示例图片，建议大家右键-另存为图片，将图片保存到 你运行程序的文件夹 中。**如下图：
+**建议：为了保证大家可以跟着教程一步一步练习，教程中会出现示例图片，建议大家右键-另存为图片，将图片保存到 你运行程序的文件夹 中。**
+
+如下图：
 
 ![001](../imgs/001.png)
 
