--- a/Tutorial/2.2 利用其他库函数读取图像数据.md
+++ b/Tutorial/2.2 利用其他库函数读取图像数据.md
@@ -1,10 +1,18 @@
-# Pytorch读取，加载图像数据(一)
+# 2.2 利用其他库函数读取图像数据
 
-在学习Pytorch的时候，先学会如何正确创建或者加载数据，至关重要。
+教程目录：[Pytorch教程目录](../README.md)
+
+在学习PyTorch的时候，先学会如何正确创建或者加载数据，至关重要。
 
 有了数据，很多函数，操作的效果就变得很直观。
 
 **本文主要用其他库读取图像文件（学会这个，你就可以在之后的学习中，将一些效果直观化）**
+
+涉及：
+
+* 使用`matplotlib`库进行读取
+* 使用`cv2`库进行读取
+* 使用`PIL`库进行读取
 
 ## 零：准备
 
