--- a/Tutorial/0 环境配置.md
+++ b/Tutorial/0 环境配置.md
@@ -1,10 +1,15 @@
 ## 环境配置
 
 **温馨提示：为了更好的教程体验，提供视频、阅读地址**
+
 Youtube:
+
 BiliBili:
+
 Github: 
+
 在学习中，遇到任何问题，可以关注公众号：土堆碎念，直接在对话框中留言，我会不定时解答的~
+
 **公众号：土堆碎念，回复：pytorch，即可获得所有的数据集及安装包，**省去找软件、数据集的时间。（同步更新中，请勿急躁）
 
 ### 0. 前言
@@ -55,8 +60,6 @@ Anaconda 的下载地址：[这儿]( https://www.anaconda.com/distribution/ )（
 
 ### 3. 显卡配置（无 Nvidia 显卡的略过）
 
-不得不说，PyTorch 在这方面做的真的好，不需要再人工安装 CUDA、cuDNN 之类的，全部都给你解决了。真的良心~以前安装真的繁琐。（吐槽一句，以前超麻烦的）
-
 只要你打开任务管理器，在 GPU 那里看到了你的 NVIDIA 显卡，即可。说明你的硬件驱动，已安装。
 
 如果你的 NVIDIA 显卡未显示，可以使用驱动人生，或者去[官网](  https://www.nvidia.cn/Download/index.aspx?lang=cn  )下载驱动。
@@ -106,60 +109,42 @@ conda activate pytorch
 
 终于到重头戏了，安装 PyTorch了。激动的打开[官网]( https://pytorch.org/ )，下拉到下面的页面。
 
-PyTorch Build 选择 Stable；选择系统；Package，Windows下推荐 conda，Linux 下推荐 pip，Python版本按照Anaconda的版本选择，我这里选择3.6，CUDA 推荐9.2。如果没有显卡的话，选择 None。我的选择如图所示：
+（不得不说，PyTorch 在这方面做的真的好，不需要再人工安装 CUDA、cuDNN 之类的，全部都给你解决了。真的良心~以前安装真的繁琐。（吐槽一句，以前超麻烦的）
+
+PyTorch Build 选择 Stable；选择系统；Package，Windows下推荐 conda，Linux 下推荐 pip；Python版本按照Anaconda的版本选择，我这里选择3.6，CUDA 推荐9.2。如果没有显卡的话，选择 None。我的选择如图所示：
 
 ![](https://pic.superbed.cn/item/5dbacbfabd461d945a86e9cb.png)
 
-复制下面的代码，之后，在开始菜单中，打开 Anaconda Prompt，粘贴即可。
+复制下面的代码，之后，在开始菜单中，打开 Anaconda Prompt，查看最左边括号中是 base 还是 pytorch。
+
+如果是 base，使用 `conda activate pytorch` 进入 pytorch 环境中。之后粘贴即可。
 
 ![](https://pic.superbed.cn/item/5dbad0d2bd461d945a875203.png)
 
 果断输入y，之后就是漫长的等待。或者去休息吧，慢慢等着。看看剧啥的，等着它慢慢下吧。如果你的并不慢，恭喜恭喜。
 
-慢的同学，跟我继续走
+![](https://pic.superbed.cn/item/5dbc38a5bd461d945adee566.png)
 
-![](https://pic.superbed.cn/item/5dbad416bd461d945a8782f9.png)
+### 6. 加速（可选）
 
-### 6.下载加速（可选）
+有的时候，下载速度太慢了，可以利用我已经下载好的文件。
 
-如果速度实在太慢了，在 Anaconda Prompt 中，按下 Ctrl + C，可以多按几下，强制停止。
+将其中的 `pytorch-1.3.0-py3.6_cuda92_cudnn7_0.tar` 和 `cudatoolkit-9.2-0.tar `两个文件，复制到刚才 Anaconda 安装的目录下的 pkgs 文件夹中。
 
-下载主要慢的原因是：PyTorch 服务器在国外，而且主要是 cuda9.2 慢，国内的清华镜像好像没有这个，所以好像无法加速。
+这两个文件，只能安装 pytorch1.3.0 和 cuda 9.2，仅限Windows。
 
-这就需要我们手动下载 cuda 了。
+![](https://pic.superbed.cn/item/5dbc4488bd461d945adfb217.png)
 
-下载地址：[这儿]( https://developer.nvidia.com/cuda-toolkit-archive )
+之后，在 Anaconda Prompt 命令行窗口，多按几次 `Ctrl + C` 结束程序。然后，重新复制 PyTorch 安装命令，粘贴到命令行上，进行安装。
 
-![](https://pic.superbed.cn/item/5dbad6fcbd461d945a87a9e7.png)
+![](https://pic.superbed.cn/item/5dbacbfabd461d945a86e9cb.png)
 
-我选择 在线安装，这种方式好像快点。下载好，双击安装。
+### 7. 验证是否安装成功
 
-![](https://pic.superbed.cn/item/5dbad7f2bd461d945a87b880.png)
+（1）在命令行左边为 pytorch 环境中，输入 python
 
-一直按默认选项，下一步。
+（2）之后，输入 `import torch`，如果没有报错，意味着 PyTorch 已经顺利安装了
 
-接下来，需要添加清华镜像来加速。复制下面代码（适用于Windows)，直接在窗口粘贴，回车。
+（3）接下来，输入 `torch.cuda.is_available`，如果是 True，意味着你可以使用 GPU，如果是 False，意味着只能使用CPU。
 
-```
-conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
-conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
-conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/
-conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/peterjc123/
-conda config --set show_channel_urls yes
-```
-
-下面的适用于 Linux
-
-```
-conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free/
-conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main/
-conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge/
-conda config --add channels https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch/
-
-conda config --set show_channel_urls yes
-```
-
-之后，将 PyTorch 官网上的安装代码，再次复制粘贴。（或者在窗口，按↑键），找到那个命令，回车。
-
-加速飞起。
-
+![](https://pic.superbed.cn/item/5dbc45aabd461d945adfbf75.png)
