--- a/Tutorial/P1. PyTorch环境配置及安装.md
+++ b/Tutorial/P1. PyTorch环境配置及安装.md
@@ -1,4 +1,4 @@
-## 环境配置
+## P1. PyTorch环境的配置及安装
 
 ---
 
@@ -70,7 +70,21 @@ Anaconda 的下载地址：[这儿]( https://www.anaconda.com/distribution/ )（
 
 如果你的 NVIDIA 显卡未显示，可以使用驱动人生，或者去[官网](  https://www.nvidia.cn/Download/index.aspx?lang=cn  )下载驱动。
 
+绝大多数的NVIDIA的显卡，都是支持深度学习的。你可以去 [这里]( https://www.geforce.com/hardware/technology/cuda/supported-gpus ) 查阅，如果这里面有你的显卡的话，那么说明你的显卡是支持深度学习的。
+
 ![](https://pic.superbed.cn/item/5dbac97dbd461d945a86c899.png)
+
+**如果你的显卡支持深度学习，请在命令行处，输入 `nvidia-smi` ，查看自己驱动的版本。**
+
+![](https://pic.superbed.cn/item/5dc55b4c8e0e2e3ee9aa56c7.png)
+
+**！！！务必，保证自己的驱动版本数大于 396.26，像我这里的驱动版本数为430.86，满足要求。**
+
+如果发现自己的版本数不满足要求，可以使用 驱动管家 或 软件管家更新，当然最推荐的是 [官网下载](https://www.nvidia.com/Download/index.aspx?lang=cn )。
+
+![](https://pic.superbed.cn/item/5dc55c538e0e2e3ee9aa8056.png)
+
+在官网选择相应的选项后，红色框部分，默认即可。产品系列中的 Notebooks 指的笔记本。将下载后的驱动，正常安装即可。
 
 ### 4. 有序的管理环境
 
@@ -133,7 +147,7 @@ PyTorch Build 选择 Stable；选择系统；Package，Windows下推荐 conda，
 
 ### 6. 加速（可选）
 
-有的时候，下载速度太慢了，可以利用我已经下载好的文件。
+有的时候，下载速度太慢了，可以利用我已经下载好的文件。（白天的话，好像速度较好，推荐大家白天下载）
 
 ```
 链接：https://pan.baidu.com/s/1cyEjHdluc4ufCkvtbgziqA 
@@ -141,15 +155,17 @@ PyTorch Build 选择 Stable；选择系统；Package，Windows下推荐 conda，
 复制这段内容后打开百度网盘手机App，操作更方便哦
 ```
 
-
-
 将其中的 `pytorch-1.3.0-py3.6_cuda92_cudnn7_0.tar` 和 `cudatoolkit-9.2-0.tar `两个文件，复制到刚才 Anaconda 安装的目录下的 pkgs 文件夹中。
 
 这两个文件，只能安装 pytorch1.3.0 和 cuda 9.2，仅限Windows。
 
 ![](https://pic.superbed.cn/item/5dbc4488bd461d945adfb217.png)
 
-之后，在 Anaconda Prompt 命令行窗口，多按几次 `Ctrl + C` 结束程序。然后，重新复制 PyTorch 安装命令，粘贴到命令行上，进行安装。
+之后，在 Anaconda Prompt 命令行窗口，多按几次 `Ctrl + C` 结束程序。
+
+之后，输入以下指令：` conda install --use-local pytorch-1.3.0-py3.6_cuda92_cudnn7_0.tar.bz2 ` 和 ` conda install --use-local cudatoolkit-9.2-0.tar.bz2`，即可使用下载的包进行安装。
+
+然后，重新复制 PyTorch 安装命令，粘贴到命令行上，进行安装。
 
 ![](https://pic.superbed.cn/item/5dbacbfabd461d945a86e9cb.png)
 
