--- a/Tutorial/P1. PyTorch环境配置及安装.md
+++ b/Tutorial/P1. PyTorch环境配置及安装.md
@@ -1,6 +1,5 @@
-## P1. PyTorch环境的配置及安装
+# P1. PyTorch环境的配置及安装
 
----
 
 **温馨提示：为了更好的教程体验，提供视频、阅读地址**
 
@@ -18,7 +17,7 @@ Github:  https://github.com/xiaotudui/PyTorch-Tutorial
 
 ---
 
-### 0. 前言
+## 0. 前言
 
 在计算机领域学习，最烦的一件事，就是安装软件，环境配置。而且，恰恰不如意的是，它还是你学习进程的第一关。第一关就出现大Boss。这样，超级容易打击学习的动力。
 
@@ -26,7 +25,7 @@ Github:  https://github.com/xiaotudui/PyTorch-Tutorial
 
 如果你在学习中，有什么建议，或者遇到什么问题，可以关注公众号：土堆碎念，直接留言，私信我。
 
-### 1. Anaconda 下载
+## 1. Anaconda 下载
 
 在机器学习，深度学习中，要用到大量的 package（就是各种工具包）。如果说，函数是一个工具，那么 package 就是一个工具包。一个个安装 package 很麻烦，而且容易出现疏漏。于是，就有了 Anaconda，这是一个集成了常用于科学分析（机器学习，深度学习）的大量package。
 
@@ -42,7 +41,7 @@ Anaconda 的下载地址：[这儿]( https://www.anaconda.com/distribution/ )（
 
 ![](https://pic.superbed.cn/item/5dbac43cbd461d945a86368a.png)
 
-### 2. Anaconda 安装
+## 2. Anaconda 安装
 
 双击进行安装，需要注意以下几点：
 
@@ -64,7 +63,7 @@ Anaconda 的下载地址：[这儿]( https://www.anaconda.com/distribution/ )（
 
 ![](https://pic.superbed.cn/item/5dbac72ebd461d945a869f93.png)
 
-### 3. 显卡配置（无 Nvidia 显卡的略过）
+## 3. 显卡配置（无 Nvidia 显卡的略过）
 
 只要你打开任务管理器，在 GPU 那里看到了你的 NVIDIA 显卡，即可。说明你的硬件驱动，已安装。
 
@@ -86,7 +85,7 @@ Anaconda 的下载地址：[这儿]( https://www.anaconda.com/distribution/ )（
 
 在官网选择相应的选项后，红色框部分，默认即可。产品系列中的 Notebooks 指的笔记本。将下载后的驱动，正常安装即可。
 
-### 4. 有序的管理环境
+## 4. 有序的管理环境
 
 也许，你之后会遇到不同的项目，需要使用到不同版本的环境。比如这个项目要用到 pytorch 0.4，另一个项目要用到 pytorch 1.0，如果你卸载了0.4版本，安装了1.0版本。那么下一次，你再碰到0.4版本，你就需要卸载1.0版本，安装0.4版本。很折腾。
 
@@ -125,7 +124,7 @@ conda activate pytorch
 
 ![](https://pic.superbed.cn/item/5dbad08ebd461d945a874e96.png)
 
-### 5. 安装 PyTorch 准备
+## 5. 安装 PyTorch 准备
 
 终于到重头戏了，安装 PyTorch了。激动的打开[官网]( https://pytorch.org/ )，下拉到下面的页面。
 
@@ -145,7 +144,7 @@ PyTorch Build 选择 Stable；选择系统；Package，Windows下推荐 conda，
 
 ![](https://pic.superbed.cn/item/5dbc38a5bd461d945adee566.png)
 
-### 6. 加速（可选）
+## 6. 加速（可选）
 
 有的时候，下载速度太慢了，可以利用我已经下载好的文件。（白天的话，好像速度较好，推荐大家白天下载）
 
@@ -169,7 +168,7 @@ PyTorch Build 选择 Stable；选择系统；Package，Windows下推荐 conda，
 
 ![](https://pic.superbed.cn/item/5dbacbfabd461d945a86e9cb.png)
 
-### 7. 验证是否安装成功
+## 7. 验证是否安装成功
 
 （1）在命令行左边为 pytorch 环境中，输入 python
 
